--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Copy output to dist
         run: |
           mkdir -p dist
-          cp index.github.html dist/index.html
+          cp index.html dist/index.html
           cp -r priv dist/priv
       - name: Setup Pages
         uses: actions/configure-pages@v5
